fixed image problem not showing up. increased size of image to 1200px on styles sheet

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@
 
 }
 #image {
-
+    width: 1200px;
 }
 #img-caption {
 
